# GrAAL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: graal.hpp
src/: graal.cpp
test/: main.cpp
